Merge branch 'master' of https://github.com/f26401004/Screen-Locker